--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -6,4 +6,10 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/EngineSettings.GameMapsSettings]
+GlobalDefaultGameMode=/Game/SnowGameModeBP.SnowGameModeBP_C
+GlobalDefaultServerGameMode=/Game/SnowGameModeBP.SnowGameModeBP_C
+GameDefaultMap=/Game/Levels/blank.blank
+EditorStartupMap=/Game/Levels/blank.blank
+ServerDefaultMap=/Game/Levels/blank.blank
 
