Added test network code for head replication

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,3 +13,6 @@ GameDefaultMap=/Game/Levels/blank.blank
 EditorStartupMap=/Game/Levels/blank.blank
 ServerDefaultMap=/Game/Levels/blank.blank
 
+[OnlineSubsystem]
+DefaultPlatformService=Null
+
