Added rudimentary replication for 2 clients.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,7 +12,7 @@ GlobalDefaultServerGameMode=/Game/SnowGameModeBP.SnowGameModeBP_C
 GameDefaultMap=/Game/Levels/blank.blank
 EditorStartupMap=/Game/Levels/blank.blank
 ServerDefaultMap=/Game/Levels/blank.blank
+bUseSplitscreen=False
 
 [OnlineSubsystem]
 DefaultPlatformService=Null
-
