--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,2 +1,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=A7B62EF24F9A74B27861D2949350F3B0
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+FullRebuild=True
+BuildConfiguration=PPBC_Development
+IncludeDebugFiles=True
+
