Added broken snowball throwing. Added falling snow.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,9 +9,9 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/SnowGameModeBP.SnowGameModeBP_C
 GlobalDefaultServerGameMode=/Game/SnowGameModeBP.SnowGameModeBP_C
-GameDefaultMap=/Game/Levels/blank.blank
-EditorStartupMap=/Game/Levels/blank.blank
-ServerDefaultMap=/Game/Levels/blank.blank
+GameDefaultMap=/Game/Levels/street.street
+EditorStartupMap=/Game/Levels/street.street
+ServerDefaultMap=/Game/Levels/street.street
 bUseSplitscreen=False
 
 [OnlineSubsystem]
