Last package commit

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,9 +9,9 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/SnowGameModeBP.SnowGameModeBP_C
 GlobalDefaultServerGameMode=/Game/SnowGameModeBP.SnowGameModeBP_C
-GameDefaultMap=/Game/Levels/street.street
+GameDefaultMap=/Game/Levels/rag.rag
 EditorStartupMap=/Game/Levels/street.street
-ServerDefaultMap=/Game/Levels/street.street
+ServerDefaultMap=/Game/Levels/rag.rag
 bUseSplitscreen=False
 
 [OnlineSubsystem]
