--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,7 +2,7 @@
 ProjectID=A7B62EF24F9A74B27861D2949350F3B0
 
 [/Script/UnrealEd.ProjectPackagingSettings]
-FullRebuild=True
+FullRebuild=False
 BuildConfiguration=PPBC_Development
 IncludeDebugFiles=True
 
