--- a/Snow.uproject
+++ b/Snow.uproject
@@ -17,6 +17,11 @@
 		{
 			"Name": "Substance",
 			"Enabled": true
+		},
+		{
+			"Name": "GameAnalytics",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/offers/d070c3fab7b74c08bab3a89c9cbf4490"
 		}
 	]
 }
