Horrible history rewrite commit to deal with git lfs. Removed glove rotation, fixed a teleport display issue, started laying groundwork for level switching, started laying groundwork for more generic item pickups.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -16,3 +16,6 @@ bUseSplitscreen=False
 
 [OnlineSubsystem]
 DefaultPlatformService=Null
+
+[/Game/LevelSphere.LevelSphere_C]
+ipAddress="10.0.0.15"
