Added a scoreboard. Not hooked up to snowball throwing quite yet.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 GlobalDefaultGameMode=/Game/SnowGameModeBP.SnowGameModeBP_C
 GlobalDefaultServerGameMode=/Game/SnowGameModeBP.SnowGameModeBP_C
 GameDefaultMap=/Game/Levels/rag.rag
-EditorStartupMap=/Game/Levels/street.street
+EditorStartupMap=/Game/Levels/rag.rag
 ServerDefaultMap=/Game/Levels/rag.rag
 bUseSplitscreen=False
 
