Added a custom GameInstance object to store data between loads.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,6 +13,7 @@ GameDefaultMap=/Game/Levels/rag.rag
 EditorStartupMap=/Game/Levels/rag.rag
 ServerDefaultMap=/Game/Levels/rag.rag
 bUseSplitscreen=False
+GameInstanceClass=/Game/SnowGameInstanceBP.SnowGameInstanceBP_C
 
 [OnlineSubsystem]
 DefaultPlatformService=Null
