--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -15,8 +15,26 @@ ServerDefaultMap=/Game/Levels/rag.rag
 bUseSplitscreen=False
 GameInstanceClass=/Game/SnowGameInstanceBP.SnowGameInstanceBP_C
 
+[/Script/Engine.GameEngine]
+!NetDriverDefinitions=ClearArray
++NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="/Script/OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="/Script/OnlineSubsystemUtils.IpNetDriver")
+ 
 [OnlineSubsystem]
-DefaultPlatformService=Null
+DefaultPlatformService=Steam
+PollingIntervalInMs=20
+ 
+[OnlineSubsystemSteam]
+bEnabled=true
+SteamDevAppId=480
+GameServerQueryPort=27015
+bRelaunchInSteam=false
+GameVersion=1.0.0.0
+bVACEnabled=1
+bAllowP2PPacketRelay=true
+P2PConnectionTimeout=90
+ 
+[/Script/OnlineSubsystemSteam.SteamNetDriver]
+NetConnectionClassName="/Script/OnlineSubsystemSteam.SteamNetConnection"
 
 [/Game/LevelSphere.LevelSphere_C]
 ipAddress="10.0.0.15"
