added async snowballs and condensed gravity to a variable within the trigger component

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -20,3 +20,7 @@ DefaultPlatformService=Null
 
 [/Game/LevelSphere.LevelSphere_C]
 ipAddress="10.0.0.15"
+
+[/Script/Engine.PhysicsSettings]
+bSubstepping=True
+
