--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,12 +9,13 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/SnowGameModeBP.SnowGameModeBP_C
 GlobalDefaultServerGameMode=/Game/SnowGameModeBP.SnowGameModeBP_C
-GameDefaultMap=/Game/Levels/rag.rag
+GameDefaultMap=/Game/Levels/entry.entry
 EditorStartupMap=/Game/Levels/rag.rag
 ServerDefaultMap=/Game/Levels/rag.rag
 bUseSplitscreen=False
 GameInstanceClass=/Game/SnowGameInstanceBP.SnowGameInstanceBP_C
  
+
 [OnlineSubsystem]
 DefaultPlatformService=Null
 
@@ -23,4 +24,3 @@ ipAddress="10.0.0.15"
 
 [/Script/Engine.PhysicsSettings]
 bSubstepping=True
-
