Started to add logging to the snowball.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -14,7 +14,9 @@ EditorStartupMap=/Game/Levels/rag.rag
 ServerDefaultMap=/Game/Levels/rag.rag
 bUseSplitscreen=False
 GameInstanceClass=/Game/SnowGameInstanceBP.SnowGameInstanceBP_C
- 
+
+[Plugins]
++EnabledPlugins=VaRestPlugin
 
 [OnlineSubsystem]
 DefaultPlatformService=Null
