--- a/Snow.uproject
+++ b/Snow.uproject
@@ -17,6 +17,11 @@
 		{
 			"Name": "Substance",
 			"Enabled": true
+		},
+		{
+			"Name": "VaRestPlugin",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/e47be161e7a24e928560290abd5dcc4f"
 		}
 	]
 }
