--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -24,5 +24,8 @@ DefaultPlatformService=Null
 [/Game/LevelSphere.LevelSphere_C]
 ipAddress="10.0.0.15"
 
+[/Game/Logger.Logger_C]
+logEndpoint="http://192.168.1.112:5000"
+
 [/Script/Engine.PhysicsSettings]
 bSubstepping=True
