Added first pass of steam integration. Can connect over lan when the server starts a level with the flag ?bIsLanMatch=1

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -15,11 +15,8 @@ ServerDefaultMap=/Game/Levels/rag.rag
 bUseSplitscreen=False
 GameInstanceClass=/Game/SnowGameInstanceBP.SnowGameInstanceBP_C
 
-[Plugins]
-+EnabledPlugins=VaRestPlugin
-
-[OnlineSubsystem]
-DefaultPlatformService=Null
+[/Script/Engine.PhysicsSettings]
+bSubstepping=True
 
 [/Game/LevelSphere.LevelSphere_C]
 ipAddress="10.0.0.15"
@@ -27,5 +24,21 @@ ipAddress="10.0.0.15"
 [/Game/Logger.Logger_C]
 logEndpoint="http://192.168.1.112:5000"
 
-[/Script/Engine.PhysicsSettings]
-bSubstepping=True
+[Plugins]
++EnabledPlugins=VaRestPlugin
+
+[/Script/Engine.GameEngine]
+!NetDriverDefinitions=ClearArray
++NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="/Script/OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="/Script/OnlineSubsystemUtils.IpNetDriver")
+ 
+[OnlineSubsystem]
+DefaultPlatformService=Steam
+ 
+[OnlineSubsystemSteam]
+bEnabled=true
+SteamDevAppId=515700
+ 
+[/Script/OnlineSubsystemSteam.SteamNetDriver]
+NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
+
+
