Added what might be a working Steam integration for LAN

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,8 +1,14 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=A7B62EF24F9A74B27861D2949350F3B0
+CompanyName=Breachgate
+CompanyDistinguishedName=Breachgate
+Homepage=http://breachgate.com
+SupportContact=info@breachgate.com
+Description=Your next snowbrawler.
+ProjectName=Snowday
+ProjectDisplayedTitle=NSLOCTEXT("", "AEE4208F4246945F558165827E948213", "{GameName}")
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 FullRebuild=False
 BuildConfiguration=PPBC_Development
 IncludeDebugFiles=True
-
