Finished up adding steam integration. I think it works without LAN!!!!!

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,7 +13,7 @@ GameDefaultMap=/Game/Levels/entry.entry
 EditorStartupMap=/Game/Levels/rag.rag
 ServerDefaultMap=/Game/Levels/rag.rag
 bUseSplitscreen=False
-GameInstanceClass=/Game/SnowGameInstanceBP.SnowGameInstanceBP_C
+GameInstanceClass=/Game/Online/SteamGameInstanceBP.SteamGameInstanceBP_C
 
 [/Script/Engine.PhysicsSettings]
 bSubstepping=True
