Added VOIP and the VaRest plugin as a project plugin.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -12,3 +12,6 @@ ProjectDisplayedTitle=NSLOCTEXT("", "AEE4208F4246945F558165827E948213", "{GameNa
 FullRebuild=False
 BuildConfiguration=PPBC_Development
 IncludeDebugFiles=True
+
+[/Script/Engine.GameSession]
+bRequiresPushToTalk=false
