--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -45,3 +45,7 @@ SteamDevAppId=515700
  
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
 NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
+
+[/Script/Engine.AudioSettings]
+VoiPSoundClass=/Game/Online/VOIP.VOIP
+
