added game modes to existing config files to auto choose the correct game mode

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,9 +9,9 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/SnowGameModeBP.SnowGameModeBP_C
 GlobalDefaultServerGameMode=/Game/SnowGameModeBP.SnowGameModeBP_C
-GameDefaultMap=/Game/Levels/entry.entry
-EditorStartupMap=/Game/Levels/rag.rag
-ServerDefaultMap=/Game/Levels/rag.rag
+GameDefaultMap=/Game/Levels/BRL_rag.BRL_rag
+EditorStartupMap=/Game/Levels/BRL_rag.BRL_rag
+ServerDefaultMap=/Game/Levels/BRL_rag.BRL_rag
 bUseSplitscreen=False
 GameInstanceClass=/Game/Online/SteamGameInstanceBP.SteamGameInstanceBP_C
 
@@ -48,4 +48,3 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 
 [/Script/Engine.AudioSettings]
 VoiPSoundClass=/Game/Online/VOIP.VOIP
-
