--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -15,3 +15,8 @@ IncludeDebugFiles=True
 
 [/Script/Engine.GameSession]
 bRequiresPushToTalk=false
+
+[/Script/Engine.WorldSettings]
++DefaultMapPrefixes=(Prefix="BRL",GameMode="/Game/GameModes/BrawlGameMode/BrawlGameModeBP.BrawlGameModeBP_C")
++DefaultMapPrefixes=(Prefix="SNW",GameMode="/Game/GameModes/SnowGameMode/SnowGameModeBP.SnowGameModeBP_C")
++DefaultMapPrefixes=(Prefix="TUT",GameMode="/Game/GameModes/TutorialGameMode/TutorialGameModeBP.TutorialGameModeBP_C")
