Added an API call on login.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -7,9 +7,9 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-GlobalDefaultGameMode=/Game/SnowGameModeBP.SnowGameModeBP_C
+GlobalDefaultGameMode=/Game/GameModes/SnowGameMode/SnowGameModeBP.SnowGameModeBP_C
 GlobalDefaultServerGameMode=/Game/SnowGameModeBP.SnowGameModeBP_C
-GameDefaultMap=/Game/Levels/BRL_rag.BRL_rag
+GameDefaultMap=/Game/Levels/SNW_entry.SNW_entry
 EditorStartupMap=/Game/Levels/BRL_rag.BRL_rag
 ServerDefaultMap=/Game/Levels/BRL_rag.BRL_rag
 bUseSplitscreen=False
