--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,7 +8,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/GameModes/SnowGameMode/SnowGameModeBP.SnowGameModeBP_C
-GlobalDefaultServerGameMode=/Game/SnowGameModeBP.SnowGameModeBP_C
+GlobalDefaultServerGameMode=/Game/GameModes/BrawlGameMode/BrawlGameModeBP.BrawlGameModeBP_C
 GameDefaultMap=/Game/Levels/SNW_entry.SNW_entry
 EditorStartupMap=/Game/Levels/BRL_rag.BRL_rag
 ServerDefaultMap=/Game/Levels/BRL_rag.BRL_rag
