--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -18,11 +18,11 @@ GameInstanceClass=/Game/Online/SteamGameInstanceBP.SteamGameInstanceBP_C
 [/Script/Engine.PhysicsSettings]
 bSubstepping=True
 
-[/Game/test.test_C]
-test="foo bar"
-
 [/Game/Logging/Logger.Logger_C]
 logEndpoint="http://192.168.1.113:5000"
+
+[/Game/Online/snow-api/snowAPI-player.snowAPI-player_C]
+host="http://192.168.1.113:3001"
 
 [Plugins]
 +EnabledPlugins=VaRestPlugin
