--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -18,6 +18,9 @@ GameInstanceClass=/Game/Online/SteamGameInstanceBP.SteamGameInstanceBP_C
 [/Script/Engine.PhysicsSettings]
 bSubstepping=True
 
+[/Game/Online/SteamGameInstanceBP.SteamGameInstanceBP_C]
+LAN=1
+
 [/Game/Logging/Logger.Logger_C]
 logEndpoint="http://192.168.1.113:5000"
 
