--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -20,9 +20,11 @@ bSubstepping=True
 
 [/Game/Online/SteamGameInstanceBP.SteamGameInstanceBP_C]
 LAN=1
+test="foooo"
 
 [/Game/Logging/Logger.Logger_C]
 logEndpoint="http://192.168.1.113:5000"
+test="foooo"
 
 [/Game/Online/snow-api/snowAPI-player.snowAPI-player_C]
 host="http://192.168.1.113:3001"
@@ -33,18 +35,18 @@ host="http://192.168.1.113:3001"
 [/Script/Engine.GameEngine]
 !NetDriverDefinitions=ClearArray
 +NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="/Script/OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="/Script/OnlineSubsystemUtils.IpNetDriver")
- 
+
 [Voice] 
 bEnabled=true
 
 [OnlineSubsystem]
 DefaultPlatformService=Steam
 bHasVoiceEnabled=true
- 
+
 [OnlineSubsystemSteam]
 bEnabled=true
 SteamDevAppId=515700
- 
+
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
 NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 
@@ -54,3 +56,7 @@ VoiPSoundClass=/Game/Online/VOIP.VOIP
 [/Script/Engine.Engine]
 MinDesiredFrameRate=60.000000
 
+[lanConfig]
+bEnabled=True
+bIsServer=False
+server="192.168.137.250"
