Changed hostname config format to the C++ reading methods.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -18,13 +18,8 @@ GameInstanceClass=/Game/Online/SteamGameInstanceBP.SteamGameInstanceBP_C
 [/Script/Engine.PhysicsSettings]
 bSubstepping=True
 
-[/Game/Online/SteamGameInstanceBP.SteamGameInstanceBP_C]
-LAN=1
-test="foooo"
-
 [/Game/Logging/Logger.Logger_C]
 logEndpoint="http://192.168.1.113:5000"
-test="foooo"
 
 [/Game/Online/snow-api/snowAPI-player.snowAPI-player_C]
 host="http://192.168.1.113:3001"
@@ -60,3 +55,9 @@ MinDesiredFrameRate=60.000000
 bEnabled=True
 bIsServer=False
 server="192.168.137.250"
+
+[snowApi]
+host="http://192.168.1.113:3002"
+
+[snowLog]
+host="http://192.168.1.113:5000"
