More work with moving hosts into config files.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -18,12 +18,6 @@ GameInstanceClass=/Game/Online/SteamGameInstanceBP.SteamGameInstanceBP_C
 [/Script/Engine.PhysicsSettings]
 bSubstepping=True
 
-[/Game/Logging/Logger.Logger_C]
-logEndpoint="http://192.168.1.113:5000"
-
-[/Game/Online/snow-api/snowAPI-player.snowAPI-player_C]
-host="http://192.168.1.113:3001"
-
 [Plugins]
 +EnabledPlugins=VaRestPlugin
 
@@ -52,12 +46,12 @@ VoiPSoundClass=/Game/Online/VOIP.VOIP
 MinDesiredFrameRate=60.000000
 
 [lanConfig]
-bEnabled=True
+bEnabled=False
 bIsServer=False
 server="192.168.137.250"
 
 [snowApi]
-host="http://192.168.1.113:3002"
+host="http://192.168.1.113:3001"
 
 [snowLog]
 host="http://192.168.1.113:5000"
