Initial build of 4.13.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -61,6 +61,9 @@ ApplicationScale=1.000000
 UIScaleRule=ShortestSide
 RenderFocusRule=Always
 
+[/Script/SubstanceCore.SubstanceSettings]
+DefaultGenerationMode=SGM_Baked
+
 [/Script/Engine.RendererSettings]
 r.MobileHDR=True
 r.MobileNumDynamicPointLights=4
