--- a/Plugins/VaRestPlugin/VaRestPlugin.uplugin
+++ b/Plugins/VaRestPlugin/VaRestPlugin.uplugin
@@ -1,31 +1,26 @@
 {
 	"FileVersion" : 3,
-	"Version" : 14,
-	"VersionName" : "1.1-r14",
+	
 	"FriendlyName" : "VaRest",
-	"Description" : "Plugin that makes REST (JSON) server communication easy to use",
-	"Category" : "Network",
+	"Version" : 16,
+	"VersionName" : "1.1-r16",
 	"CreatedBy" : "Vladimir Alyamkin",
 	"CreatedByURL" : "http://alyamkin.com",
-	"DocsURL" : "",
+	"EngineVersion" : "4.11.0",
+	"Description" : "Plugin that makes REST (JSON) server communication easy to use",
+	"Category" : "Network",
 	"MarketplaceURL" : "com.epicgames.launcher://ue/marketplace/content/e47be161e7a24e928560290abd5dcc4f",
-	"SupportURL" : "",
-	"EnabledByDefault" : true,
-	"CanContainContent" : false,
-	"IsBetaVersion" : false,
-	"Installed" : true,
-	"RequiresBuildPlatform" : false,
+
 	"Modules" :
 	[
 		{
 			"Name" : "VaRestPlugin",
 			"Type" : "Runtime",
-			"LoadingPhase" : "PreDefault"
+			"LoadingPhase": "PreDefault"
 		},
 		{
-			"Name" : "VaRestEditorPlugin",
-			"Type" : "Developer",
-			"LoadingPhase" : "Default"
+			"Name": "VaRestEditorPlugin",
+			"Type": "Developer"
 		}
 	]
 }
