Added a countdown timer to the hand options menu widget

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -14,6 +14,7 @@ EditorStartupMap=/Game/Levels/BRL_rag.BRL_rag
 ServerDefaultMap=/Game/Levels/BRL_rag.BRL_rag
 bUseSplitscreen=False
 GameInstanceClass=/Game/Online/SteamGameInstanceBP.SteamGameInstanceBP_C
+TransitionMap=None
 
 [/Script/Engine.PhysicsSettings]
 bSubstepping=True
@@ -108,4 +109,3 @@ vr.InstancedStereo=False
 r.WireframeCullThreshold=5.000000
 UIScaleRule=ShortestSide
 UIScaleCurve=(EditorCurveData=(PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant,Keys=,DefaultValue=340282346638528859811704183484516925440.000000),ExternalCurve=None)
-
