First pass at 90fps optimizations

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -44,7 +44,7 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 VoiPSoundClass=/Game/Online/VOIP.VOIP
 
 [/Script/Engine.Engine]
-MinDesiredFrameRate=60.000000
+MinDesiredFrameRate=90.000000
 
 [lanConfig]
 bEnabled=False
@@ -56,11 +56,6 @@ host="http://192.168.1.203:3001"
 
 [snowLog]
 host="http://192.168.1.203:5000"
-
-[/Script/Engine.UserInterfaceSettings]
-ApplicationScale=1.000000
-UIScaleRule=ShortestSide
-RenderFocusRule=Always
 
 [/Script/SubstanceCore.SubstanceSettings]
 DefaultGenerationMode=SGM_Baked
@@ -81,20 +76,20 @@ Compat.UseDXT5NormalMaps=False
 r.ClearCoatNormal=False
 r.ReflectionCaptureResolution=128
 r.AllowStaticLighting=True
-r.NormalMapsForStaticLighting=False
+r.NormalMapsForStaticLighting=True
 r.GenerateMeshDistanceFields=False
 r.GenerateLandscapeGIData=True
 r.TessellationAdaptivePixelsPerTriangle=48.000000
-r.SeparateTranslucency=True
-r.TranslucentSortPolicy=0
+r.SeparateTranslucency=False
+r.TranslucentSortPolicy=2
 TranslucentSortAxis=(X=0.000000,Y=-1.000000,Z=0.000000)
 r.CustomDepth=1
 r.DefaultFeature.Bloom=True
-r.DefaultFeature.AmbientOcclusion=True
-r.DefaultFeature.AmbientOcclusionStaticFraction=True
-r.DefaultFeature.AutoExposure=True
+r.DefaultFeature.AmbientOcclusion=False
+r.DefaultFeature.AmbientOcclusionStaticFraction=False
+r.DefaultFeature.AutoExposure=False
 r.DefaultFeature.AutoExposure.Method=0
-r.DefaultFeature.MotionBlur=True
+r.DefaultFeature.MotionBlur=False
 r.DefaultFeature.LensFlare=False
 r.DefaultFeature.AntiAliasing=2
 r.EarlyZPass=3
@@ -109,3 +104,19 @@ vr.InstancedStereo=False
 r.WireframeCullThreshold=5.000000
 UIScaleRule=ShortestSide
 UIScaleCurve=(EditorCurveData=(PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant,Keys=,DefaultValue=340282346638528859811704183484516925440.000000),ExternalCurve=None)
+r.ForwardShading=True
+
+[/Script/Engine.UserInterfaceSettings]
+RenderFocusRule=Always
+DefaultCursor=None
+TextEditBeamCursor=None
+CrosshairsCursor=None
+HandCursor=None
+GrabHandCursor=None
+GrabHandClosedCursor=None
+SlashedCircleCursor=None
+ApplicationScale=1.000000
+UIScaleRule=ShortestSide
+CustomScalingRuleClass=None
+UIScaleCurve=(EditorCurveData=(PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant,Keys=((Time=480.000000,Value=0.444000),(Time=720.000000,Value=0.666000),(Time=1080.000000,Value=1.000000),(Time=8640.000000,Value=8.000000)),DefaultValue=340282346638528859811704183484516925440.000000),ExternalCurve=None)
+
