--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -87,7 +87,7 @@ r.CustomDepth=1
 r.DefaultFeature.Bloom=True
 r.DefaultFeature.AmbientOcclusion=False
 r.DefaultFeature.AmbientOcclusionStaticFraction=False
-r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.AutoExposure=True
 r.DefaultFeature.AutoExposure.Method=0
 r.DefaultFeature.MotionBlur=False
 r.DefaultFeature.LensFlare=False
@@ -100,11 +100,11 @@ r.BasePassOutputsVelocity=False
 r.SelectiveBasePassOutputs=False
 r.AllowGlobalClipPlane=False
 r.GBufferFormat=1
-vr.InstancedStereo=False
+vr.InstancedStereo=True
 r.WireframeCullThreshold=5.000000
 UIScaleRule=ShortestSide
 UIScaleCurve=(EditorCurveData=(PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant,Keys=,DefaultValue=340282346638528859811704183484516925440.000000),ExternalCurve=None)
-r.ForwardShading=True
+r.ForwardShading=False
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=Always
