Some quick fixes from the last build. removed mic

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -27,7 +27,7 @@ bSubstepping=True
 +NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="/Script/OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="/Script/OnlineSubsystemUtils.IpNetDriver")
 
 [Voice] 
-bEnabled=true
+bEnabled=false
 
 [OnlineSubsystem]
 DefaultPlatformService=Steam
