--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -31,7 +31,7 @@ bEnabled=false
 
 [OnlineSubsystem]
 DefaultPlatformService=Steam
-bHasVoiceEnabled=true
+bHasVoiceEnabled=false
 
 [OnlineSubsystemSteam]
 bEnabled=true
