brawlgamemode now uses seamless server travel, set transition map to be TRN_ map

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -14,7 +14,7 @@ EditorStartupMap=/Game/Levels/BRL_rag.BRL_rag
 ServerDefaultMap=/Game/Levels/BRL_rag.BRL_rag
 bUseSplitscreen=False
 GameInstanceClass=/Game/Online/SteamGameInstanceBP.SteamGameInstanceBP_C
-TransitionMap=None
+TransitionMap=/Game/Levels/TRN_loading.TRN_loading
 
 [/Script/Engine.PhysicsSettings]
 bSubstepping=True
@@ -119,4 +119,3 @@ ApplicationScale=1.000000
 UIScaleRule=ShortestSide
 CustomScalingRuleClass=None
 UIScaleCurve=(EditorCurveData=(PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant,Keys=((Time=480.000000,Value=0.444000),(Time=720.000000,Value=0.666000),(Time=1080.000000,Value=1.000000),(Time=8640.000000,Value=8.000000)),DefaultValue=340282346638528859811704183484516925440.000000),ExternalCurve=None)
-
