Added a deploy conf that has the correct API endpoint. Enabled EventDrivenLoader.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -174,4 +174,6 @@ InitialAverageFrameRate=0.016667
 +PhysicalSurfaces=(Type=SurfaceType9,Name="HollowMetal")
 +PhysicalSurfaces=(Type=SurfaceType10,Name="WoodDoor")
 
+[/Script/Engine.StreamingSettings]
+s.EventDrivenLoaderEnabled=True
 
