pushing new substance uplugin and filterplugin to fix substance issue

--- a/Plugins/Substance/Substance.uplugin
+++ b/Plugins/Substance/Substance.uplugin
@@ -1,30 +1,45 @@
 {
 	"FileVersion" : 3,
-	"Name" : "Substance",
-	"FriendlyName" : "Substance",
 	"Version" : 45,
 	"VersionName" : "4.14.0.17",
-	"EngineVersion" : "4.14",
+	"FriendlyName" : "Substance",
+	"Description" : "Adds support for Substance (sbsar) textures",
+	"Category" : "Editor",
 	"CreatedBy" : "Allegorithmic Inc.",
 	"CreatedByURL" : "http://www.allegorithmic.com/",
-	"Description" : "Adds support for Substance (sbsar) textures",
+	"DocsURL" : "",
 	"MarketplaceURL" : "com.epicgames.launcher://ue/marketplace/content/2f6439c2f9584f49809d9b13b16c2ba4",
-	"Category" : "Editor",
+	"SupportURL" : "",
 	"EnabledByDefault" : true,
-
+	"CanContainContent" : false,
+	"IsBetaVersion" : false,
+	"Installed" : true,
+	"RequiresBuildPlatform" : false,
 	"Modules" :
 	[
 		{
 			"Name" : "SubstanceCore",
 			"Type" : "Runtime",
-			"WhitelistPlatforms" :  [ "Win64", "Win32", "Mac", "Linux" ],
-			"LoadingPhase" : "PreDefault"
+			"LoadingPhase" : "PreDefault",
+			"WhitelistPlatforms" :
+			[
+				"Win64",
+				"Win32",
+				"Mac",
+				"Linux"
+			]
 		},
 		{
 			"Name" : "SubstanceEditor",
 			"Type" : "Editor",
-			"WhitelistPlatforms" :  [ "Win64", "Win32", "Mac", "Linux" ],
-			"LoadingPhase" : "PostDefault"
+			"LoadingPhase" : "PostDefault",
+			"WhitelistPlatforms" :
+			[
+				"Win64",
+				"Win32",
+				"Mac",
+				"Linux"
+			]
 		}
 	]
 }
