Improved teleport-device collision post-4.14

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,8 @@
 [URL]
 
+;[Core.Log]
+;global=verbose
+
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
@@ -139,7 +142,7 @@ MaxDepenetrationVelocity=0.000000
 ContactOffsetMultiplier=0.010000
 MinContactOffset=0.000100
 MaxContactOffset=1.000000
-bSimulateSkeletalMeshOnDedicatedServer=True
+bSimulateSkeletalMeshOnDedicatedServer=False
 DefaultShapeComplexity=CTF_UseSimpleAndComplex
 bDefaultHasComplexCollision=True
 bSuppressFaceRemapTable=False
@@ -149,8 +152,8 @@ bDisableCCD=False
 MaxPhysicsDeltaTime=0.033333
 bSubstepping=True
 bSubsteppingAsync=False
-MaxSubstepDeltaTime=0.016667
-MaxSubsteps=6
+MaxSubstepDeltaTime=0.013300
+MaxSubsteps=8
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
@@ -176,4 +179,3 @@ InitialAverageFrameRate=0.016667
 
 [/Script/Engine.StreamingSettings]
 s.EventDrivenLoaderEnabled=True
-
