Added a loading spinner to the search doorknob. Added a config variable for firstLoad.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -51,6 +51,9 @@ bEnabled=False
 bIsServer=False
 server="192.168.137.250"
 
+[snow]
+firstBoot=False
+
 [snowApi]
 host="http://10.37.44.179:3001"
 
