--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -52,13 +52,14 @@ bIsServer=False
 server="192.168.137.250"
 
 [snow]
+beta=True
 firstBoot=False
 
 [snowApi]
-host="http://10.37.44.179:3001"
+host="http://107.170.232.35:3001"
 
 [snowLog]
-host="http://10.37.44.179:5000"
+host="http://107.170.232.35:5000"
 
 [/Script/SubstanceCore.SubstanceSettings]
 DefaultGenerationMode=SGM_Baked
