fixed duplicate variables in health and brawl modes, added in HRD prefix for horde mode

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -20,3 +20,4 @@ bRequiresPushToTalk=false
 +DefaultMapPrefixes=(Prefix="BRL",GameMode="/Game/GameModes/BrawlGameMode/BrawlGameModeBP.BrawlGameModeBP_C")
 +DefaultMapPrefixes=(Prefix="SNW",GameMode="/Game/GameModes/SnowGameMode/SnowGameModeBP.SnowGameModeBP_C")
 +DefaultMapPrefixes=(Prefix="TUT",GameMode="/Game/GameModes/TutorialGameMode/TutorialGameModeBP.TutorialGameModeBP_C")
++DefaultMapPrefixes=(Prefix="HRD",GameMode="/Game/GameModes/HordeGameMode/HordeGameModeBP.HordeGameModeBP_C")
