--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -7,6 +7,7 @@ SupportContact=info@breachgate.com
 Description=Your next snowbrawler.
 ProjectName=Snowday
 ProjectDisplayedTitle=NSLOCTEXT("", "AEE4208F4246945F558165827E948213", "{GameName}")
+bStartInVR=True
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 FullRebuild=False
