made windows reflective, added in player outline, text for being under the ground

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -88,7 +88,7 @@ r.TessellationAdaptivePixelsPerTriangle=48.000000
 r.SeparateTranslucency=False
 r.TranslucentSortPolicy=2
 TranslucentSortAxis=(X=0.000000,Y=-1.000000,Z=0.000000)
-r.CustomDepth=1
+r.CustomDepth=3
 r.DefaultFeature.Bloom=True
 r.DefaultFeature.AmbientOcclusion=False
 r.DefaultFeature.AmbientOcclusionStaticFraction=False
@@ -125,6 +125,9 @@ UIScaleRule=ShortestSide
 CustomScalingRuleClass=None
 UIScaleCurve=(EditorCurveData=(PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant,Keys=((Time=480.000000,Value=0.444000),(Time=720.000000,Value=0.666000),(Time=1080.000000,Value=1.000000),(Time=8640.000000,Value=8.000000)),DefaultValue=340282346638528859811704183484516925440.000000),ExternalCurve=None)
 
+[/Script/Engine.StreamingSettings]
+s.EventDrivenLoaderEnabled=True
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -152,7 +155,7 @@ DefaultShapeComplexity=CTF_UseSimpleAndComplex
 bDefaultHasComplexCollision=True
 bSuppressFaceRemapTable=False
 bSupportUVFromHitResults=False
-bDisableActiveTransforms=False
+bDisableActiveActors=False
 bDisableCCD=False
 MaxPhysicsDeltaTime=0.033333
 bSubstepping=True
@@ -171,6 +174,7 @@ InitialAverageFrameRate=0.016667
 -PhysicalSurfaces=(Type=SurfaceType7,Name="Snow")
 -PhysicalSurfaces=(Type=SurfaceType8,Name="PlasticBins")
 -PhysicalSurfaces=(Type=SurfaceType9,Name="HollowMetal")
+-PhysicalSurfaces=(Type=SurfaceType10,Name="WoodDoor")
 +PhysicalSurfaces=(Type=SurfaceType1,Name="WoodWall")
 +PhysicalSurfaces=(Type=SurfaceType2,Name="Brick")
 +PhysicalSurfaces=(Type=SurfaceType3,Name="Glass")
@@ -182,5 +186,3 @@ InitialAverageFrameRate=0.016667
 +PhysicalSurfaces=(Type=SurfaceType9,Name="HollowMetal")
 +PhysicalSurfaces=(Type=SurfaceType10,Name="WoodDoor")
 
-[/Script/Engine.StreamingSettings]
-s.EventDrivenLoaderEnabled=True
