--- a/Snow.uproject
+++ b/Snow.uproject
@@ -38,6 +38,14 @@
 		{
 			"Name": "OnlineSubsystemNull",
 			"Enabled": false
+		},
+		{
+			"Name": "GameLiftServerSDK",
+			"Enabled": true
+		},
+		{
+			"Name": "GearVR",
+			"Enabled": false
 		}
 	]
 }
