Quick and dirty GameInstance refactor. Need to move logic over to LAN instance next.

--- a/Snow.uproject
+++ b/Snow.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.14",
+	"EngineAssociation": "{9F3E1424-40AE-C688-4EA1-2AB75EA46278}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
@@ -9,7 +9,8 @@
 			"Type": "Runtime",
 			"LoadingPhase": "Default",
 			"AdditionalDependencies": [
-				"Engine"
+				"Engine",
+				"AdvancedSessions"
 			]
 		}
 	],
