Integrated Hypereal platform SDK with a Hypereal Game Instance.

--- a/Snow.uproject
+++ b/Snow.uproject
@@ -63,6 +63,10 @@
 		{
 			"Name": "SteamVR",
 			"Enabled": false
+		},
+		{
+			"Name": "OnlineSubsystemHypereal",
+			"Enabled": true
 		}
 	]
 }
